comp_etapa6/y.output
Grammar

    0 $accept: begin $end

    1 begin: programa

    2 programa: programa decl
    3         | %empty

    4 decl: vardec
    5     | fundec

    6 vardec: vartype TK_IDENTIFIER '=' literal ';'
    7       | vartype TK_IDENTIFIER '[' LIT_INTEGER ']' veclist ';'

    8 vartype: KW_INT
    9        | KW_BOOL
   10        | KW_BYTE
   11        | KW_LONG
   12        | KW_FLOAT

   13 literal: LIT_INTEGER
   14        | LIT_FLOAT
   15        | LIT_TRUE
   16        | LIT_FALSE
   17        | LIT_CHAR
   18        | LIT_STRING

   19 veclist: ':' literal vecrest
   20        | %empty

   21 vecrest: literal vecrest
   22        | %empty

   23 fundec: vartype TK_IDENTIFIER '(' parlist ')' block

   24 par: vartype TK_IDENTIFIER

   25 parlist: par rest
   26        | %empty

   27 rest: ',' par rest
   28     | %empty

   29 funcall: TK_IDENTIFIER '(' funlist ')'

   30 funpar: expression

   31 funlist: funpar funrest
   32        | %empty

   33 funrest: ',' funpar funrest
   34        | %empty

   35 cmd: TK_IDENTIFIER '=' expression
   36    | TK_IDENTIFIER '[' expression ']' '=' expression
   37    | KW_PRINT printlist
   38    | KW_READ TK_IDENTIFIER
   39    | KW_WHILE '(' expression ')' cmd
   40    | KW_FOR '(' TK_IDENTIFIER ':' expression ',' expression ',' expression ')' cmd
   41    | KW_IF '(' expression ')' KW_THEN cmd
   42    | KW_IF '(' expression ')' KW_THEN cmd KW_ELSE cmd
   43    | KW_BREAK
   44    | block
   45    | KW_RETURN expression
   46    | %empty

   47 printlist: expression printrest

   48 printrest: expression printrest
   49          | %empty

   50 expression: TK_IDENTIFIER '[' expression ']'
   51           | TK_IDENTIFIER
   52           | literal
   53           | expression OPERATOR_EQ expression
   54           | expression OPERATOR_DIF expression
   55           | expression OPERATOR_GE expression
   56           | expression OPERATOR_LE expression
   57           | expression '+' expression
   58           | expression '-' expression
   59           | expression '*' expression
   60           | expression '/' expression
   61           | expression '<' expression
   62           | expression '>' expression
   63           | expression '.' expression
   64           | expression 'v' expression
   65           | expression '&' expression
   66           | '~' expression
   67           | '(' expression ')'
   68           | funcall

   69 block: '{' lcmd '}'

   70 lcmd: cmd cmdend

   71 cmdend: ';' cmd cmdend
   72       | %empty


Terminals, with rules where they appear

$end (0) 0
'&' (38) 65
'(' (40) 23 29 39 40 41 42 67
')' (41) 23 29 39 40 41 42 67
'*' (42) 59
'+' (43) 57
',' (44) 27 33 40
'-' (45) 58
'.' (46) 63
'/' (47) 60
':' (58) 19 40
';' (59) 6 7 71
'<' (60) 61
'=' (61) 6 35 36
'>' (62) 62
'[' (91) 7 36 50
']' (93) 7 36 50
'v' (118) 64
'{' (123) 69
'}' (125) 69
'~' (126) 66
error (256)
KW_BYTE (258) 10
KW_INT (259) 8
KW_LONG (260) 11
KW_FLOAT (261) 12
KW_BOOL (262) 9
KW_IF (263) 41 42
KW_THEN (264) 41 42
KW_ELSE (265) 42
KW_WHILE (266) 39
KW_FOR (267) 40
KW_READ (268) 38
KW_PRINT (269) 37
KW_RETURN (270) 45
KW_BREAK (271) 43
OPERATOR_LE (272) 56
OPERATOR_GE (273) 55
OPERATOR_EQ (274) 53
OPERATOR_DIF (275) 54
TK_IDENTIFIER (276) 6 7 23 24 29 35 36 38 40 50 51
LIT_INTEGER (277) 7 13
LIT_FLOAT (278) 14
LIT_TRUE (279) 15
LIT_FALSE (280) 16
LIT_CHAR (281) 17
LIT_STRING (282) 18


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
begin (49)
    on left: 1, on right: 0
programa (50)
    on left: 2 3, on right: 1 2
decl (51)
    on left: 4 5, on right: 2
vardec (52)
    on left: 6 7, on right: 4
vartype (53)
    on left: 8 9 10 11 12, on right: 6 7 23 24
literal (54)
    on left: 13 14 15 16 17 18, on right: 6 19 21 52
veclist (55)
    on left: 19 20, on right: 7
vecrest (56)
    on left: 21 22, on right: 19 21
fundec (57)
    on left: 23, on right: 5
par (58)
    on left: 24, on right: 25 27
parlist (59)
    on left: 25 26, on right: 23
rest (60)
    on left: 27 28, on right: 25 27
funcall (61)
    on left: 29, on right: 68
funpar (62)
    on left: 30, on right: 31 33
funlist (63)
    on left: 31 32, on right: 29
funrest (64)
    on left: 33 34, on right: 31 33
cmd (65)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46, on right: 39 40 41
    42 70 71
printlist (66)
    on left: 47, on right: 37
printrest (67)
    on left: 48 49, on right: 47 48
expression (68)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    68, on right: 30 35 36 39 40 41 42 45 47 48 50 53 54 55 56 57 58
    59 60 61 62 63 64 65 66 67
block (69)
    on left: 69, on right: 23 44
lcmd (70)
    on left: 70, on right: 69
cmdend (71)
    on left: 71 72, on right: 70 71


State 0

    0 $accept: . begin $end

    $default  reduce using rule 3 (programa)

    begin     go to state 1
    programa  go to state 2


State 1

    0 $accept: begin . $end

    $end  shift, and go to state 3


State 2

    1 begin: programa .
    2 programa: programa . decl

    KW_BYTE   shift, and go to state 4
    KW_INT    shift, and go to state 5
    KW_LONG   shift, and go to state 6
    KW_FLOAT  shift, and go to state 7
    KW_BOOL   shift, and go to state 8

    $default  reduce using rule 1 (begin)

    decl     go to state 9
    vardec   go to state 10
    vartype  go to state 11
    fundec   go to state 12


State 3

    0 $accept: begin $end .

    $default  accept


State 4

   10 vartype: KW_BYTE .

    $default  reduce using rule 10 (vartype)


State 5

    8 vartype: KW_INT .

    $default  reduce using rule 8 (vartype)


State 6

   11 vartype: KW_LONG .

    $default  reduce using rule 11 (vartype)


State 7

   12 vartype: KW_FLOAT .

    $default  reduce using rule 12 (vartype)


State 8

    9 vartype: KW_BOOL .

    $default  reduce using rule 9 (vartype)


State 9

    2 programa: programa decl .

    $default  reduce using rule 2 (programa)


State 10

    4 decl: vardec .

    $default  reduce using rule 4 (decl)


State 11

    6 vardec: vartype . TK_IDENTIFIER '=' literal ';'
    7       | vartype . TK_IDENTIFIER '[' LIT_INTEGER ']' veclist ';'
   23 fundec: vartype . TK_IDENTIFIER '(' parlist ')' block

    TK_IDENTIFIER  shift, and go to state 13


State 12

    5 decl: fundec .

    $default  reduce using rule 5 (decl)


State 13

    6 vardec: vartype TK_IDENTIFIER . '=' literal ';'
    7       | vartype TK_IDENTIFIER . '[' LIT_INTEGER ']' veclist ';'
   23 fundec: vartype TK_IDENTIFIER . '(' parlist ')' block

    '['  shift, and go to state 14
    '('  shift, and go to state 15
    '='  shift, and go to state 16


State 14

    7 vardec: vartype TK_IDENTIFIER '[' . LIT_INTEGER ']' veclist ';'

    LIT_INTEGER  shift, and go to state 17


State 15

   23 fundec: vartype TK_IDENTIFIER '(' . parlist ')' block

    KW_BYTE   shift, and go to state 4
    KW_INT    shift, and go to state 5
    KW_LONG   shift, and go to state 6
    KW_FLOAT  shift, and go to state 7
    KW_BOOL   shift, and go to state 8

    $default  reduce using rule 26 (parlist)

    vartype  go to state 18
    par      go to state 19
    parlist  go to state 20


State 16

    6 vardec: vartype TK_IDENTIFIER '=' . literal ';'

    LIT_INTEGER  shift, and go to state 21
    LIT_FLOAT    shift, and go to state 22
    LIT_TRUE     shift, and go to state 23
    LIT_FALSE    shift, and go to state 24
    LIT_CHAR     shift, and go to state 25
    LIT_STRING   shift, and go to state 26

    literal  go to state 27


State 17

    7 vardec: vartype TK_IDENTIFIER '[' LIT_INTEGER . ']' veclist ';'

    ']'  shift, and go to state 28


State 18

   24 par: vartype . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 29


State 19

   25 parlist: par . rest

    ','  shift, and go to state 30

    $default  reduce using rule 28 (rest)

    rest  go to state 31


State 20

   23 fundec: vartype TK_IDENTIFIER '(' parlist . ')' block

    ')'  shift, and go to state 32


State 21

   13 literal: LIT_INTEGER .

    $default  reduce using rule 13 (literal)


State 22

   14 literal: LIT_FLOAT .

    $default  reduce using rule 14 (literal)


State 23

   15 literal: LIT_TRUE .

    $default  reduce using rule 15 (literal)


State 24

   16 literal: LIT_FALSE .

    $default  reduce using rule 16 (literal)


State 25

   17 literal: LIT_CHAR .

    $default  reduce using rule 17 (literal)


State 26

   18 literal: LIT_STRING .

    $default  reduce using rule 18 (literal)


State 27

    6 vardec: vartype TK_IDENTIFIER '=' literal . ';'

    ';'  shift, and go to state 33


State 28

    7 vardec: vartype TK_IDENTIFIER '[' LIT_INTEGER ']' . veclist ';'

    ':'  shift, and go to state 34

    $default  reduce using rule 20 (veclist)

    veclist  go to state 35


State 29

   24 par: vartype TK_IDENTIFIER .

    $default  reduce using rule 24 (par)


State 30

   27 rest: ',' . par rest

    KW_BYTE   shift, and go to state 4
    KW_INT    shift, and go to state 5
    KW_LONG   shift, and go to state 6
    KW_FLOAT  shift, and go to state 7
    KW_BOOL   shift, and go to state 8

    vartype  go to state 18
    par      go to state 36


State 31

   25 parlist: par rest .

    $default  reduce using rule 25 (parlist)


State 32

   23 fundec: vartype TK_IDENTIFIER '(' parlist ')' . block

    '{'  shift, and go to state 37

    block  go to state 38


State 33

    6 vardec: vartype TK_IDENTIFIER '=' literal ';' .

    $default  reduce using rule 6 (vardec)


State 34

   19 veclist: ':' . literal vecrest

    LIT_INTEGER  shift, and go to state 21
    LIT_FLOAT    shift, and go to state 22
    LIT_TRUE     shift, and go to state 23
    LIT_FALSE    shift, and go to state 24
    LIT_CHAR     shift, and go to state 25
    LIT_STRING   shift, and go to state 26

    literal  go to state 39


State 35

    7 vardec: vartype TK_IDENTIFIER '[' LIT_INTEGER ']' veclist . ';'

    ';'  shift, and go to state 40


State 36

   27 rest: ',' par . rest

    ','  shift, and go to state 30

    $default  reduce using rule 28 (rest)

    rest  go to state 41


State 37

   69 block: '{' . lcmd '}'

    KW_IF          shift, and go to state 42
    KW_WHILE       shift, and go to state 43
    KW_FOR         shift, and go to state 44
    KW_READ        shift, and go to state 45
    KW_PRINT       shift, and go to state 46
    KW_RETURN      shift, and go to state 47
    KW_BREAK       shift, and go to state 48
    TK_IDENTIFIER  shift, and go to state 49
    '{'            shift, and go to state 37

    $default  reduce using rule 46 (cmd)

    cmd    go to state 50
    block  go to state 51
    lcmd   go to state 52


State 38

   23 fundec: vartype TK_IDENTIFIER '(' parlist ')' block .

    $default  reduce using rule 23 (fundec)


State 39

   19 veclist: ':' literal . vecrest

    LIT_INTEGER  shift, and go to state 21
    LIT_FLOAT    shift, and go to state 22
    LIT_TRUE     shift, and go to state 23
    LIT_FALSE    shift, and go to state 24
    LIT_CHAR     shift, and go to state 25
    LIT_STRING   shift, and go to state 26

    $default  reduce using rule 22 (vecrest)

    literal  go to state 53
    vecrest  go to state 54


State 40

    7 vardec: vartype TK_IDENTIFIER '[' LIT_INTEGER ']' veclist ';' .

    $default  reduce using rule 7 (vardec)


State 41

   27 rest: ',' par rest .

    $default  reduce using rule 27 (rest)


State 42

   41 cmd: KW_IF . '(' expression ')' KW_THEN cmd
   42    | KW_IF . '(' expression ')' KW_THEN cmd KW_ELSE cmd

    '('  shift, and go to state 55


State 43

   39 cmd: KW_WHILE . '(' expression ')' cmd

    '('  shift, and go to state 56


State 44

   40 cmd: KW_FOR . '(' TK_IDENTIFIER ':' expression ',' expression ',' expression ')' cmd

    '('  shift, and go to state 57


State 45

   38 cmd: KW_READ . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 58


State 46

   37 cmd: KW_PRINT . printlist

    TK_IDENTIFIER  shift, and go to state 59
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_TRUE       shift, and go to state 23
    LIT_FALSE      shift, and go to state 24
    LIT_CHAR       shift, and go to state 25
    LIT_STRING     shift, and go to state 26
    '~'            shift, and go to state 60
    '('            shift, and go to state 61

    literal     go to state 62
    funcall     go to state 63
    printlist   go to state 64
    expression  go to state 65


State 47

   45 cmd: KW_RETURN . expression

    TK_IDENTIFIER  shift, and go to state 59
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_TRUE       shift, and go to state 23
    LIT_FALSE      shift, and go to state 24
    LIT_CHAR       shift, and go to state 25
    LIT_STRING     shift, and go to state 26
    '~'            shift, and go to state 60
    '('            shift, and go to state 61

    literal     go to state 62
    funcall     go to state 63
    expression  go to state 66


State 48

   43 cmd: KW_BREAK .

    $default  reduce using rule 43 (cmd)


State 49

   35 cmd: TK_IDENTIFIER . '=' expression
   36    | TK_IDENTIFIER . '[' expression ']' '=' expression

    '['  shift, and go to state 67
    '='  shift, and go to state 68


State 50

   70 lcmd: cmd . cmdend

    ';'  shift, and go to state 69

    $default  reduce using rule 72 (cmdend)

    cmdend  go to state 70


State 51

   44 cmd: block .

    $default  reduce using rule 44 (cmd)


State 52

   69 block: '{' lcmd . '}'

    '}'  shift, and go to state 71


State 53

   21 vecrest: literal . vecrest

    LIT_INTEGER  shift, and go to state 21
    LIT_FLOAT    shift, and go to state 22
    LIT_TRUE     shift, and go to state 23
    LIT_FALSE    shift, and go to state 24
    LIT_CHAR     shift, and go to state 25
    LIT_STRING   shift, and go to state 26

    $default  reduce using rule 22 (vecrest)

    literal  go to state 53
    vecrest  go to state 72


State 54

   19 veclist: ':' literal vecrest .

    $default  reduce using rule 19 (veclist)


State 55

   41 cmd: KW_IF '(' . expression ')' KW_THEN cmd
   42    | KW_IF '(' . expression ')' KW_THEN cmd KW_ELSE cmd

    TK_IDENTIFIER  shift, and go to state 59
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_TRUE       shift, and go to state 23
    LIT_FALSE      shift, and go to state 24
    LIT_CHAR       shift, and go to state 25
    LIT_STRING     shift, and go to state 26
    '~'            shift, and go to state 60
    '('            shift, and go to state 61

    literal     go to state 62
    funcall     go to state 63
    expression  go to state 73


State 56

   39 cmd: KW_WHILE '(' . expression ')' cmd

    TK_IDENTIFIER  shift, and go to state 59
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_TRUE       shift, and go to state 23
    LIT_FALSE      shift, and go to state 24
    LIT_CHAR       shift, and go to state 25
    LIT_STRING     shift, and go to state 26
    '~'            shift, and go to state 60
    '('            shift, and go to state 61

    literal     go to state 62
    funcall     go to state 63
    expression  go to state 74


State 57

   40 cmd: KW_FOR '(' . TK_IDENTIFIER ':' expression ',' expression ',' expression ')' cmd

    TK_IDENTIFIER  shift, and go to state 75


State 58

   38 cmd: KW_READ TK_IDENTIFIER .

    $default  reduce using rule 38 (cmd)


State 59

   29 funcall: TK_IDENTIFIER . '(' funlist ')'
   50 expression: TK_IDENTIFIER . '[' expression ']'
   51           | TK_IDENTIFIER .

    '['  shift, and go to state 76
    '('  shift, and go to state 77

    $default  reduce using rule 51 (expression)


State 60

   66 expression: '~' . expression

    TK_IDENTIFIER  shift, and go to state 59
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_TRUE       shift, and go to state 23
    LIT_FALSE      shift, and go to state 24
    LIT_CHAR       shift, and go to state 25
    LIT_STRING     shift, and go to state 26
    '~'            shift, and go to state 60
    '('            shift, and go to state 61

    literal     go to state 62
    funcall     go to state 63
    expression  go to state 78


State 61

   67 expression: '(' . expression ')'

    TK_IDENTIFIER  shift, and go to state 59
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_TRUE       shift, and go to state 23
    LIT_FALSE      shift, and go to state 24
    LIT_CHAR       shift, and go to state 25
    LIT_STRING     shift, and go to state 26
    '~'            shift, and go to state 60
    '('            shift, and go to state 61

    literal     go to state 62
    funcall     go to state 63
    expression  go to state 79


State 62

   52 expression: literal .

    $default  reduce using rule 52 (expression)


State 63

   68 expression: funcall .

    $default  reduce using rule 68 (expression)


State 64

   37 cmd: KW_PRINT printlist .

    $default  reduce using rule 37 (cmd)


State 65

   47 printlist: expression . printrest
   53 expression: expression . OPERATOR_EQ expression
   54           | expression . OPERATOR_DIF expression
   55           | expression . OPERATOR_GE expression
   56           | expression . OPERATOR_LE expression
   57           | expression . '+' expression
   58           | expression . '-' expression
   59           | expression . '*' expression
   60           | expression . '/' expression
   61           | expression . '<' expression
   62           | expression . '>' expression
   63           | expression . '.' expression
   64           | expression . 'v' expression
   65           | expression . '&' expression

    OPERATOR_LE    shift, and go to state 80
    OPERATOR_GE    shift, and go to state 81
    OPERATOR_EQ    shift, and go to state 82
    OPERATOR_DIF   shift, and go to state 83
    TK_IDENTIFIER  shift, and go to state 59
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_TRUE       shift, and go to state 23
    LIT_FALSE      shift, and go to state 24
    LIT_CHAR       shift, and go to state 25
    LIT_STRING     shift, and go to state 26
    '.'            shift, and go to state 84
    'v'            shift, and go to state 85
    '~'            shift, and go to state 60
    '&'            shift, and go to state 86
    '>'            shift, and go to state 87
    '<'            shift, and go to state 88
    '+'            shift, and go to state 89
    '-'            shift, and go to state 90
    '*'            shift, and go to state 91
    '/'            shift, and go to state 92
    '('            shift, and go to state 61

    $default  reduce using rule 49 (printrest)

    literal     go to state 62
    funcall     go to state 63
    printrest   go to state 93
    expression  go to state 94


State 66

   45 cmd: KW_RETURN expression .
   53 expression: expression . OPERATOR_EQ expression
   54           | expression . OPERATOR_DIF expression
   55           | expression . OPERATOR_GE expression
   56           | expression . OPERATOR_LE expression
   57           | expression . '+' expression
   58           | expression . '-' expression
   59           | expression . '*' expression
   60           | expression . '/' expression
   61           | expression . '<' expression
   62           | expression . '>' expression
   63           | expression . '.' expression
   64           | expression . 'v' expression
   65           | expression . '&' expression

    OPERATOR_LE   shift, and go to state 80
    OPERATOR_GE   shift, and go to state 81
    OPERATOR_EQ   shift, and go to state 82
    OPERATOR_DIF  shift, and go to state 83
    '.'           shift, and go to state 84
    'v'           shift, and go to state 85
    '&'           shift, and go to state 86
    '>'           shift, and go to state 87
    '<'           shift, and go to state 88
    '+'           shift, and go to state 89
    '-'           shift, and go to state 90
    '*'           shift, and go to state 91
    '/'           shift, and go to state 92

    $default  reduce using rule 45 (cmd)


State 67

   36 cmd: TK_IDENTIFIER '[' . expression ']' '=' expression

    TK_IDENTIFIER  shift, and go to state 59
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_TRUE       shift, and go to state 23
    LIT_FALSE      shift, and go to state 24
    LIT_CHAR       shift, and go to state 25
    LIT_STRING     shift, and go to state 26
    '~'            shift, and go to state 60
    '('            shift, and go to state 61

    literal     go to state 62
    funcall     go to state 63
    expression  go to state 95


State 68

   35 cmd: TK_IDENTIFIER '=' . expression

    TK_IDENTIFIER  shift, and go to state 59
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_TRUE       shift, and go to state 23
    LIT_FALSE      shift, and go to state 24
    LIT_CHAR       shift, and go to state 25
    LIT_STRING     shift, and go to state 26
    '~'            shift, and go to state 60
    '('            shift, and go to state 61

    literal     go to state 62
    funcall     go to state 63
    expression  go to state 96


State 69

   71 cmdend: ';' . cmd cmdend

    KW_IF          shift, and go to state 42
    KW_WHILE       shift, and go to state 43
    KW_FOR         shift, and go to state 44
    KW_READ        shift, and go to state 45
    KW_PRINT       shift, and go to state 46
    KW_RETURN      shift, and go to state 47
    KW_BREAK       shift, and go to state 48
    TK_IDENTIFIER  shift, and go to state 49
    '{'            shift, and go to state 37

    $default  reduce using rule 46 (cmd)

    cmd    go to state 97
    block  go to state 51


State 70

   70 lcmd: cmd cmdend .

    $default  reduce using rule 70 (lcmd)


State 71

   69 block: '{' lcmd '}' .

    $default  reduce using rule 69 (block)


State 72

   21 vecrest: literal vecrest .

    $default  reduce using rule 21 (vecrest)


State 73

   41 cmd: KW_IF '(' expression . ')' KW_THEN cmd
   42    | KW_IF '(' expression . ')' KW_THEN cmd KW_ELSE cmd
   53 expression: expression . OPERATOR_EQ expression
   54           | expression . OPERATOR_DIF expression
   55           | expression . OPERATOR_GE expression
   56           | expression . OPERATOR_LE expression
   57           | expression . '+' expression
   58           | expression . '-' expression
   59           | expression . '*' expression
   60           | expression . '/' expression
   61           | expression . '<' expression
   62           | expression . '>' expression
   63           | expression . '.' expression
   64           | expression . 'v' expression
   65           | expression . '&' expression

    OPERATOR_LE   shift, and go to state 80
    OPERATOR_GE   shift, and go to state 81
    OPERATOR_EQ   shift, and go to state 82
    OPERATOR_DIF  shift, and go to state 83
    '.'           shift, and go to state 84
    'v'           shift, and go to state 85
    '&'           shift, and go to state 86
    '>'           shift, and go to state 87
    '<'           shift, and go to state 88
    '+'           shift, and go to state 89
    '-'           shift, and go to state 90
    '*'           shift, and go to state 91
    '/'           shift, and go to state 92
    ')'           shift, and go to state 98


State 74

   39 cmd: KW_WHILE '(' expression . ')' cmd
   53 expression: expression . OPERATOR_EQ expression
   54           | expression . OPERATOR_DIF expression
   55           | expression . OPERATOR_GE expression
   56           | expression . OPERATOR_LE expression
   57           | expression . '+' expression
   58           | expression . '-' expression
   59           | expression . '*' expression
   60           | expression . '/' expression
   61           | expression . '<' expression
   62           | expression . '>' expression
   63           | expression . '.' expression
   64           | expression . 'v' expression
   65           | expression . '&' expression

    OPERATOR_LE   shift, and go to state 80
    OPERATOR_GE   shift, and go to state 81
    OPERATOR_EQ   shift, and go to state 82
    OPERATOR_DIF  shift, and go to state 83
    '.'           shift, and go to state 84
    'v'           shift, and go to state 85
    '&'           shift, and go to state 86
    '>'           shift, and go to state 87
    '<'           shift, and go to state 88
    '+'           shift, and go to state 89
    '-'           shift, and go to state 90
    '*'           shift, and go to state 91
    '/'           shift, and go to state 92
    ')'           shift, and go to state 99


State 75

   40 cmd: KW_FOR '(' TK_IDENTIFIER . ':' expression ',' expression ',' expression ')' cmd

    ':'  shift, and go to state 100


State 76

   50 expression: TK_IDENTIFIER '[' . expression ']'

    TK_IDENTIFIER  shift, and go to state 59
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_TRUE       shift, and go to state 23
    LIT_FALSE      shift, and go to state 24
    LIT_CHAR       shift, and go to state 25
    LIT_STRING     shift, and go to state 26
    '~'            shift, and go to state 60
    '('            shift, and go to state 61

    literal     go to state 62
    funcall     go to state 63
    expression  go to state 101


State 77

   29 funcall: TK_IDENTIFIER '(' . funlist ')'

    TK_IDENTIFIER  shift, and go to state 59
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_TRUE       shift, and go to state 23
    LIT_FALSE      shift, and go to state 24
    LIT_CHAR       shift, and go to state 25
    LIT_STRING     shift, and go to state 26
    '~'            shift, and go to state 60
    '('            shift, and go to state 61

    $default  reduce using rule 32 (funlist)

    literal     go to state 62
    funcall     go to state 63
    funpar      go to state 102
    funlist     go to state 103
    expression  go to state 104


State 78

   53 expression: expression . OPERATOR_EQ expression
   54           | expression . OPERATOR_DIF expression
   55           | expression . OPERATOR_GE expression
   56           | expression . OPERATOR_LE expression
   57           | expression . '+' expression
   58           | expression . '-' expression
   59           | expression . '*' expression
   60           | expression . '/' expression
   61           | expression . '<' expression
   62           | expression . '>' expression
   63           | expression . '.' expression
   64           | expression . 'v' expression
   65           | expression . '&' expression
   66           | '~' expression .

    OPERATOR_LE   shift, and go to state 80
    OPERATOR_GE   shift, and go to state 81
    OPERATOR_EQ   shift, and go to state 82
    OPERATOR_DIF  shift, and go to state 83
    '>'           shift, and go to state 87
    '<'           shift, and go to state 88
    '+'           shift, and go to state 89
    '-'           shift, and go to state 90
    '*'           shift, and go to state 91
    '/'           shift, and go to state 92

    $default  reduce using rule 66 (expression)


State 79

   53 expression: expression . OPERATOR_EQ expression
   54           | expression . OPERATOR_DIF expression
   55           | expression . OPERATOR_GE expression
   56           | expression . OPERATOR_LE expression
   57           | expression . '+' expression
   58           | expression . '-' expression
   59           | expression . '*' expression
   60           | expression . '/' expression
   61           | expression . '<' expression
   62           | expression . '>' expression
   63           | expression . '.' expression
   64           | expression . 'v' expression
   65           | expression . '&' expression
   67           | '(' expression . ')'

    OPERATOR_LE   shift, and go to state 80
    OPERATOR_GE   shift, and go to state 81
    OPERATOR_EQ   shift, and go to state 82
    OPERATOR_DIF  shift, and go to state 83
    '.'           shift, and go to state 84
    'v'           shift, and go to state 85
    '&'           shift, and go to state 86
    '>'           shift, and go to state 87
    '<'           shift, and go to state 88
    '+'           shift, and go to state 89
    '-'           shift, and go to state 90
    '*'           shift, and go to state 91
    '/'           shift, and go to state 92
    ')'           shift, and go to state 105


State 80

   56 expression: expression OPERATOR_LE . expression

    TK_IDENTIFIER  shift, and go to state 59
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_TRUE       shift, and go to state 23
    LIT_FALSE      shift, and go to state 24
    LIT_CHAR       shift, and go to state 25
    LIT_STRING     shift, and go to state 26
    '~'            shift, and go to state 60
    '('            shift, and go to state 61

    literal     go to state 62
    funcall     go to state 63
    expression  go to state 106


State 81

   55 expression: expression OPERATOR_GE . expression

    TK_IDENTIFIER  shift, and go to state 59
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_TRUE       shift, and go to state 23
    LIT_FALSE      shift, and go to state 24
    LIT_CHAR       shift, and go to state 25
    LIT_STRING     shift, and go to state 26
    '~'            shift, and go to state 60
    '('            shift, and go to state 61

    literal     go to state 62
    funcall     go to state 63
    expression  go to state 107


State 82

   53 expression: expression OPERATOR_EQ . expression

    TK_IDENTIFIER  shift, and go to state 59
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_TRUE       shift, and go to state 23
    LIT_FALSE      shift, and go to state 24
    LIT_CHAR       shift, and go to state 25
    LIT_STRING     shift, and go to state 26
    '~'            shift, and go to state 60
    '('            shift, and go to state 61

    literal     go to state 62
    funcall     go to state 63
    expression  go to state 108


State 83

   54 expression: expression OPERATOR_DIF . expression

    TK_IDENTIFIER  shift, and go to state 59
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_TRUE       shift, and go to state 23
    LIT_FALSE      shift, and go to state 24
    LIT_CHAR       shift, and go to state 25
    LIT_STRING     shift, and go to state 26
    '~'            shift, and go to state 60
    '('            shift, and go to state 61

    literal     go to state 62
    funcall     go to state 63
    expression  go to state 109


State 84

   63 expression: expression '.' . expression

    TK_IDENTIFIER  shift, and go to state 59
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_TRUE       shift, and go to state 23
    LIT_FALSE      shift, and go to state 24
    LIT_CHAR       shift, and go to state 25
    LIT_STRING     shift, and go to state 26
    '~'            shift, and go to state 60
    '('            shift, and go to state 61

    literal     go to state 62
    funcall     go to state 63
    expression  go to state 110


State 85

   64 expression: expression 'v' . expression

    TK_IDENTIFIER  shift, and go to state 59
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_TRUE       shift, and go to state 23
    LIT_FALSE      shift, and go to state 24
    LIT_CHAR       shift, and go to state 25
    LIT_STRING     shift, and go to state 26
    '~'            shift, and go to state 60
    '('            shift, and go to state 61

    literal     go to state 62
    funcall     go to state 63
    expression  go to state 111


State 86

   65 expression: expression '&' . expression

    TK_IDENTIFIER  shift, and go to state 59
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_TRUE       shift, and go to state 23
    LIT_FALSE      shift, and go to state 24
    LIT_CHAR       shift, and go to state 25
    LIT_STRING     shift, and go to state 26
    '~'            shift, and go to state 60
    '('            shift, and go to state 61

    literal     go to state 62
    funcall     go to state 63
    expression  go to state 112


State 87

   62 expression: expression '>' . expression

    TK_IDENTIFIER  shift, and go to state 59
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_TRUE       shift, and go to state 23
    LIT_FALSE      shift, and go to state 24
    LIT_CHAR       shift, and go to state 25
    LIT_STRING     shift, and go to state 26
    '~'            shift, and go to state 60
    '('            shift, and go to state 61

    literal     go to state 62
    funcall     go to state 63
    expression  go to state 113


State 88

   61 expression: expression '<' . expression

    TK_IDENTIFIER  shift, and go to state 59
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_TRUE       shift, and go to state 23
    LIT_FALSE      shift, and go to state 24
    LIT_CHAR       shift, and go to state 25
    LIT_STRING     shift, and go to state 26
    '~'            shift, and go to state 60
    '('            shift, and go to state 61

    literal     go to state 62
    funcall     go to state 63
    expression  go to state 114


State 89

   57 expression: expression '+' . expression

    TK_IDENTIFIER  shift, and go to state 59
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_TRUE       shift, and go to state 23
    LIT_FALSE      shift, and go to state 24
    LIT_CHAR       shift, and go to state 25
    LIT_STRING     shift, and go to state 26
    '~'            shift, and go to state 60
    '('            shift, and go to state 61

    literal     go to state 62
    funcall     go to state 63
    expression  go to state 115


State 90

   58 expression: expression '-' . expression
